traversal.snake.Snake.scala.error
Compilation error:
Snake:23: error: ')' expected but '}' found.
while(!test) {if((isFacingWall())&&(getDirection()==(Direction.WEST))} 
                                                                     ^